Starting hotels in Kotlin
- Starting `HotelActivity` written in Kotlin
- Use Anko library in `HotelActivity` for views
- Convert `HotelServices` to Kotlin
- Cleanup `HotelServicesTest` a little
- Anko is only available on jcenter so we download it locally for now

--- a/project/src/main/res/values/styles_cars.xml
+++ b/project/src/main/res/values/styles_cars.xml
@@ -7,6 +7,8 @@
 
     <style name="V2.Widget" />
 
+    <style name="V2.Theme.Hotels" parent="AppTheme.Base" />
+
     <style name="V2.Theme.Cars" parent="AppTheme.Base" />
 
     <style name="AppTheme.Base" parent="@style/Theme.AppCompat.Light">
