--- a/project/src/airAsiaGo/res/values/themes.xml
+++ b/project/src/airAsiaGo/res/values/themes.xml
@@ -91,6 +91,7 @@
         <item name="skin_flightRulesActionBarLogo">@drawable/ic_logo_flights_aag</item>
         <item name="skin_hotelLoginActionBarIcon">@drawable/ic_action_bar_aag_logo_small</item>
         <item name="skin_flightLoginActionBarIcon">@drawable/ic_logo_flights_aag</item>
+        <item name="skin_totalDueToday">@string/total_due_today</item>
     </style>
 
     <style name="FlightTheme" parent="@style/Theme.AirAsiaGo">
@@ -176,6 +177,7 @@
         <item name="skin_itinCardOverflowDrawable">@drawable/ic_overflow_white</item>
         <item name="skin_itinCardActionBarCheckmark">@drawable/ic_action_bar_checkmark_white</item>
         <item name="skin_itinCardTitleTextColor">@color/itin_white_text</item>
+        <item name="skin_actionBarShopText">@string/shop</item>
     </style>
 
     <style name="LaunchActionBarTabAirAsiaGoStyle" parent="@android:style/Widget.Holo.ActionBar.TabView">
