--- a/project/src/main/res/layout/lx_search_params_presenter.xml
+++ b/project/src/main/res/layout/lx_search_params_presenter.xml
@@ -7,66 +7,84 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical"
-        android:background="#F9F9F9"
+        android:background="#FFFFFF"
         android:paddingTop="?attr/actionBarSize" >
 
         <LinearLayout
-            android:id="@+id/location_container"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="16dp"
-            android:layout_marginRight="16dp"
-            android:paddingBottom="@dimen/search_dropdown_padding"
-            android:focusable="true"
-            android:focusableInTouchMode="true"
-            android:orientation="horizontal">
+            android:background="@color/lx_primary_color"
+            android:orientation="vertical">
 
-            <com.expedia.bookings.widget.AlwaysFilterAutoCompleteTextView
-                android:id="@+id/search_location"
-                style="@style/LXAutocomplete"
+            <LinearLayout
+                android:id="@+id/location_container"
                 android:layout_width="match_parent"
-                android:layout_height="46dp"
-                android:completionThreshold="1"
-                android:dropDownAnchor="@+id/location_container"
-                android:hint="@string/Destination"
-                android:imeOptions="actionDone"
-                android:inputType="textNoSuggestions"
-                android:dropDownSelector="#FFFFFF"/>
+                android:layout_height="wrap_content"
+                android:layout_marginRight="16dp"
+                android:focusable="true"
+                android:focusableInTouchMode="true"
+                android:orientation="horizontal" >
 
+                <ImageView
+                    android:layout_width="55dp"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    android:layout_marginRight="1dp"
+                    android:src="@drawable/location"
+                    android:tint="#FFFFFF" />
+
+                <com.expedia.bookings.widget.AlwaysFilterAutoCompleteTextView
+                    android:id="@+id/search_location"
+                    style="@style/LXAutocomplete"
+                    android:layout_width="0dp"
+                    android:layout_height="50dp"
+                    android:layout_marginRight="5dp"
+                    android:layout_weight="1"
+                    android:completionThreshold="1"
+                    android:dropDownAnchor="@+id/drop_down_anchor"
+                    android:dropDownHeight="fill_parent"
+                    android:dropDownSelector="#FFFFFF"
+                    android:dropDownWidth="fill_parent"
+                    android:hint="@string/pick_up_location"
+                    android:imeOptions="actionDone"
+                    android:inputType="textNoSuggestions" />
+
+            </LinearLayout>
+
+            <View
+                android:id="@+id/drop_down_anchor"
+                android:layout_width="match_parent"
+                android:layout_height="0dp" />
+
+            <ToggleButton
+                android:id="@+id/select_dates"
+                android:layout_width="match_parent"
+                android:layout_height="50dp"
+                android:layout_below="@id/location_container"
+                android:layout_margin="0dp"
+                android:background="?android:attr/selectableItemBackground"
+                android:drawableLeft="@drawable/date"
+                android:drawablePadding="24dp"
+                android:gravity="left|center_vertical"
+                android:paddingLeft="20dp"
+                android:textAllCaps="false"
+                android:textColor="@drawable/lx_text_selector"
+                android:textOff="@string/select_lx_search_dates"
+                android:textOn="@string/select_lx_search_dates"
+                android:textSize="15sp"
+                android:textStyle="normal" />
         </LinearLayout>
-
-        <ToggleButton
-            android:id="@+id/select_dates"
-            style="?android:attr/borderlessButtonStyle"
-            android:layout_width="match_parent"
-            android:layout_height="46dp"
-            android:layout_marginLeft="16dp"
-            android:layout_marginRight="16dp"
-            android:layout_marginTop="@dimen/search_toggle_button_padding"
-            android:background="@drawable/lx_button_background_selector"
-            android:drawableLeft="@drawable/lx_button_circle"
-            android:drawablePadding="12dp"
-            android:gravity="left|center_vertical"
-            android:paddingLeft="13dp"
-            android:paddingRight="5dp"
-            android:textAllCaps="false"
-            android:textColor="@drawable/lx_text_selector"
-            android:textOff="@string/select_lx_search_dates"
-            android:textOn="@string/select_lx_search_dates"
-            android:textSize="14sp" />
 
         <LinearLayout
             android:id="@id/calendar_container"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="10dp"
             android:orientation="vertical" >
 
             <View
                 android:layout_width="match_parent"
                 android:layout_height="8dp"
-                android:layout_alignParentTop="true"
-                android:background="@drawable/drop_shadow" />
+                android:background="@drawable/revers_drop_shadow" />
 
             <com.mobiata.android.time.widget.CalendarPicker
                 android:id="@+id/search_calendar"
