--- a/project/src/main/res/values/colors.xml
+++ b/project/src/main/res/values/colors.xml
@@ -244,7 +244,6 @@
 
     <!-- LX colors -->
     <color name="lx_primary_color">#DB6F0D</color>
-    <color name="lx_dropdown_background_color">#F0F0F0</color>
     <color name="lx_valid_days_calendar">#3A3A3A</color>
     <color name="lx_invalid_days_calendar">#A9A9A9</color>
     <color name="lx_calendar_week_color">#888888</color>
@@ -268,6 +267,7 @@
     <color name="lx_secondary_color_disabled">#F6DAC0</color>
     <color name="lx_dates_container_border_color">#CCCCCC</color>
     <color name="lx_confirmation_action_background">#3A424C</color>
+    <color name="lx_unchecked_toggle_text_color">#FFC48E</color>
 
     <color name="search_dropdown_disabled_stroke">#C3C3C3</color>
     <color name="lx_sort_filter_text_color">#404040</color>
