--- a/project/src/main/res/layout/car_results_presenter.xml
+++ b/project/src/main/res/layout/car_results_presenter.xml
@@ -51,7 +51,6 @@
 
     </com.expedia.bookings.widget.CarCategoryListWidget>
 
-
     <View
         android:id="@+id/toolbar_background"
         android:layout_width="match_parent"
@@ -121,16 +120,18 @@
             android:gravity="center"
             android:orientation="horizontal">
 
-            <TextView
+            <com.expedia.bookings.widget.TextView
                 android:id="@+id/filter_number_text"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:background="@drawable/filter_number_bg"
-                android:paddingLeft="7dp"
-                android:paddingRight="7dp"
+                android:paddingBottom="1dp"
+                android:paddingLeft="5.5dp"
+                android:paddingRight="5.5dp"
                 android:textColor="#ffffff"
-                android:textSize="16sp"
-                android:textStyle="bold" />
+                android:textSize="15sp"
+                android:textStyle="bold"
+                app:textStyle="medium" />
 
             <ImageView
                 android:id="@+id/filter_icon"
