4549. Cars Cost Summary Screen Currency Message Cutoff
Added minHeight to fix the cutoff issue.
Also design gave me a UI polish for views in cost breakdown.

--- a/project/src/main/res/values-v21/dimens.xml
+++ b/project/src/main/res/values-v21/dimens.xml
@@ -2,4 +2,5 @@
 <resources>
     <dimen name="search_dropdown_padding">10dp</dimen>
     <dimen name="search_toggle_button_padding">0dp</dimen>
+    <dimen name="cars_checkout_cost_summary_min_height">240dp</dimen>
 </resources>
