--- a/project/src/main/res/layout/cost_summary_row.xml
+++ b/project/src/main/res/layout/cost_summary_row.xml
@@ -8,18 +8,23 @@
         android:id="@+id/price_type_text_view"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_weight="3"
-        android:padding="12dp"
+        android:layout_weight="1"
+        android:paddingBottom="8dp"
+        android:paddingLeft="12dp"
+        android:paddingRight="12dp"
+        android:paddingTop="8dp"
         android:textColor="@color/text_black"
         android:textSize="14sp" />
 
     <com.expedia.bookings.widget.TextView
         android:id="@+id/price_text_view"
-        android:layout_width="0dp"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_weight="2"
         android:gravity="right"
-        android:padding="12dp"
+        android:paddingBottom="8dp"
+        android:paddingLeft="12dp"
+        android:paddingRight="12dp"
+        android:paddingTop="8dp"
         android:textAppearance="?android:attr/textAppearanceMedium"
         android:textColor="@color/text_black"
         android:textSize="14sp" />
