4415-4556 car/lx search text polish

--- a/project/src/main/res/layout/lx_search_params_presenter.xml
+++ b/project/src/main/res/layout/lx_search_params_presenter.xml
@@ -94,11 +94,12 @@
                 android:background="@android:color/white"
                 android:paddingBottom="8dp"
                 app:calendarDaySelectionFillColor="@android:color/white"
+                app:calendarDaysOfWeekColor="@color/lx_primary_color"
                 app:calendarHeaderTextColor="@color/lx_primary_color"
                 app:calendarHeaderTextSize="16dp"
                 app:calendarHighlightColor="@color/lx_primary_color"
                 app:calendarHighlightInverseColor="@color/lx_primary_color"
-                app:calendarTodayColor="@color/lx_valid_days_calendar"
+                app:calendarTodayColor="@color/lx_primary_color"
                 app:calendarInvalidDaysColor="@color/lx_invalid_days_calendar"
                 app:calendarLayout="@layout/calendar_cars_lx_layout"
                 app:calendarBaseColor="@color/lx_valid_days_calendar"
