--- a/project/src/main/res/layout/widget_car_date_time.xml
+++ b/project/src/main/res/layout/widget_car_date_time.xml
@@ -14,6 +14,7 @@
         android:paddingBottom="8dp"
         app:calendarBaseColor="@color/cars_valid_days_calendar"
         app:calendarDaySelectionFillColor="@android:color/white"
+        app:calendarDaysOfWeekColor="@color/cars_primary_color"
         app:calendarHeaderTextColor="@color/cars_primary_color"
         app:calendarHeaderTextSize="16dp"
         app:calendarHighlightColor="@color/cars_primary_color"
@@ -21,7 +22,7 @@
         app:calendarInvalidDaysColor="@color/cars_invalid_days_calendar"
         app:calendarLayout="@layout/calendar_cars_lx_layout"
         app:calendarSecondaryColor="@color/cars_valid_days_calendar"
-        app:calendarTodayColor="@color/cars_valid_days_calendar"
+        app:calendarTodayColor="@color/cars_primary_color"
         app:calendarWeekSelectionColor="@color/cars_primary_color" />
 
     <View
