update string for lx suggestion

--- a/project/src/main/res/layout/lx_search_params_presenter.xml
+++ b/project/src/main/res/layout/lx_search_params_presenter.xml
@@ -45,7 +45,7 @@
                     android:dropDownHeight="fill_parent"
                     android:dropDownSelector="#FFFFFF"
                     android:dropDownWidth="fill_parent"
-                    android:hint="@string/pick_up_location"
+                    android:hint="@string/location_activity_details"
                     android:imeOptions="actionDone"
                     android:inputType="textNoSuggestions" />
 
