--- a/project/src/main/res/values/styles_cars.xml
+++ b/project/src/main/res/values/styles_cars.xml
@@ -32,6 +32,8 @@
         <item name="windowActionModeOverlay">true</item>
         <item name="colorAccent">@color/cars_primary_color</item>
         <item name="android:colorEdgeEffect">@color/cars_primary_color</item>
+        <item name="toolbarNavigationButtonStyle">@style/CarNavigationButtonStyle</item>
+        <item name="android:actionBarItemBackground">?android:selectableItemBackground</item>
     </style>
 
     <style name="AppTheme.Base" parent="@style/Theme.AppCompat.Light">
@@ -220,6 +222,10 @@
         <item name="android:fontFamily">sans-serif-medium</item>
         <item name="android:textStyle">normal</item>
         <item name="android:textColor">#5C5C5C</item>
+    </style>
+
+    <style name="CarNavigationButtonStyle" parent="Widget.AppCompat.Toolbar.Button.Navigation">
+        <item name="android:background">?android:selectableItemBackground</item>
     </style>
     
 </resources>
