New search animation for cars

--- a/project/src/main/res/layout/car_results_presenter.xml
+++ b/project/src/main/res/layout/car_results_presenter.xml
@@ -74,7 +74,7 @@
                 android:layout_height="match_parent">
 
                 <com.expedia.bookings.widget.TextView
-                    android:id="@+id/toolBarSearchText"
+                    android:id="@+id/toolbar_search_text"
                     style="@style/CarsToolbarTitleTextAppearance"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content" />
