--- a/project/src/main/res/layout/widget_car_search_params.xml
+++ b/project/src/main/res/layout/widget_car_search_params.xml
@@ -8,18 +8,14 @@
         android:id="@+id/search_container"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="#FFFFFF"
-        android:clipChildren="false"
-        android:clipToPadding="false"
         android:orientation="vertical"
         android:paddingTop="?attr/actionBarSize">
 
         <LinearLayout
+            android:id="@+id/search_params_container"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:background="@color/cars_primary_color"
-            android:clipChildren="false"
-            android:clipToPadding="false"
             android:orientation="vertical">
 
         <LinearLayout
@@ -28,16 +24,15 @@
                 android:layout_height="wrap_content"
                 android:layout_alignParentTop="true"
                 android:layout_marginRight="16dp"
-                android:clipChildren="false"
-                android:clipToPadding="false"
                 android:focusable="true"
                 android:focusableInTouchMode="true"
                 android:orientation="horizontal">
 
                 <ImageView
+                    android:id="@+id/location_image_view"
                     android:layout_width="55dp"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="center"
+                    android:layout_height="50dp"
+                    android:scaleType="center"
                     android:layout_marginRight="1dp"
                     android:src="@drawable/location"
                     android:tint="#FFFFFF" />
@@ -117,6 +112,42 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_gravity="top"
-        android:minHeight="?attr/actionBarSize" />
+        android:minHeight="?attr/actionBarSize">
+
+        <FrameLayout
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent" >
+
+            <com.expedia.bookings.widget.TextView
+                android:id="@+id/toolbar_search_text"
+                style="@style/CarsToolbarTitleTextAppearance"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_vertical" />
+
+            <LinearLayout
+                android:id="@+id/toolbar_two"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:orientation="vertical"
+                android:visibility="gone">
+
+                <com.expedia.bookings.widget.TextView
+                    android:id="@+id/toolbar_detail_text"
+                    style="@style/CarsToolbarTitleTextAppearance"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content" />
+
+
+                <com.expedia.bookings.widget.TextView
+                    android:id="@+id/toolbar_subtitle_text"
+                    style="@style/CarsToolbarSubtitleTextAppearance"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content" />
+
+            </LinearLayout>
+        </FrameLayout>
+
+    </android.support.v7.widget.Toolbar>
 
 </com.expedia.bookings.presenter.CarSearchPresenter>
