--- a/project/src/airAsiaGo/res/values/donottranslate.xml
+++ b/project/src/airAsiaGo/res/values/donottranslate.xml
@@ -1,5 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources xmlns:tools="http://schemas.android.com/tools">
+    <string name="brand_name">AirAsiaGo</string>
+
     <string name="app_name">AirAsiaGo</string>
 
     <!-- Email addresses -->
