--- a/project/src/expedia/res/values/donottranslate.xml
+++ b/project/src/expedia/res/values/donottranslate.xml
@@ -1,4 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources xmlns:tools="http://schemas.android.com/tools">
+    <string name="brand_name">Expedia</string>
+
     <string name="app_name">Expedia</string>
 </resources>
