HotelSearchPresenter layout refactor
Have HotelSearchPresenter custom view inflate a merge tag so as to
enforce it's children views and keep the custom view source and it's
layout file more tightly coupled, as is the case in this View.

--- a/project/src/main/res/layout/activity_hotel.xml
+++ b/project/src/main/res/layout/activity_hotel.xml
@@ -6,12 +6,11 @@
     android:orientation="vertical"
     tools:ignore="UnusedResources">
 
-    <include
+    <com.expedia.bookings.presenter.hotel.HotelSearchPresenter
         android:id="@+id/widget_hotel_params"
-        layout="@layout/widget_hotel_search_params"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:visibility="visible" />
+        android:visibility="visible"/>
 
 
 </com.expedia.bookings.presenter.hotel.HotelPresenter>
