--- a/project/src/main/res/layout/widget_hotel_search_params.xml
+++ b/project/src/main/res/layout/widget_hotel_search_params.xml
@@ -1,10 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
-<com.expedia.bookings.presenter.hotel.HotelSearchPresenter xmlns:android="http://schemas.android.com/apk/res/android"
+<merge xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:orientation="vertical"
     tools:ignore="UnusedResources">
 
     <LinearLayout
@@ -233,4 +230,4 @@
         app:titleTextAppearance="@style/CarsToolbarTitleTextAppearance" />
 
 
-</com.expedia.bookings.presenter.hotel.HotelSearchPresenter>
+</merge>
