s/4580 adding tooltip in hotel search presenter

--- a/project/src/main/res/layout/widget_hotel_search_params.xml
+++ b/project/src/main/res/layout/widget_hotel_search_params.xml
@@ -133,6 +133,9 @@
             app:calendarDaySelectionFillColor="@android:color/white"
             app:calendarDaysOfWeekColor="@color/hotels_primary_color"
             app:calendarHeaderTextColor="@color/hotels_primary_color"
+            app:calendarToolTipEnabled ="true"
+            app:calendarToolTipBackground="@drawable/toolbar_bg"
+            app:calendarToolTipTailDrawable="@drawable/toolbar_arrow"
             app:calendarHeaderTextSize="16dp"
             app:calendarHighlightColor="@color/hotels_primary_color"
             app:calendarHighlightInverseColor="@color/hotels_primary_color"
