Updated themes and color for Wotif: - Font color of map pins on launch screen - Overflow image on Itin screen - Color of "+" icon on Trips screen - Tablet webview actionbar color

--- a/project/src/wotif/res/values-sw600dp/tablet_themes.xml
+++ b/project/src/wotif/res/values-sw600dp/tablet_themes.xml
@@ -40,6 +40,12 @@
 
     </style>
 
+    <style name="V2.Widget.ActionBar.TabletWeb">
+        <item name="android:displayOptions">showHome|useLogo|homeAsUp|showTitle</item>
+        <item name="android:background">@color/action_bar_bg_color</item>
+        <item name="android:titleTextStyle">@style/FlightActionBarTextAppearance</item>
+    </style>
+
     <style name="V2.Theme" parent="Theme.Wotif.Tablet" />
 
 </resources>
