--- a/project/src/main/res/values/themes.xml
+++ b/project/src/main/res/values/themes.xml
@@ -226,6 +226,7 @@
         <item name="skin_tablet_hotel_coupon_text_color">@color/tablet_hotel_coupon_text_color</item>
         <item name="skin_etp_pay_now_charges_text">@string/etp_pay_now_charges_text</item>
         <item name="skin_totalDueToday">@string/total_due_today</item>
+        <item name="skin_itinActionOverflowDrawable">@drawable/ic_itin_action_overflow_white</item>
     </style>
 
     <!-- Inherit EB or VSC theme based on desired project -->
