--- a/project/src/main/res/values/whitelabels.xml
+++ b/project/src/main/res/values/whitelabels.xml
@@ -318,4 +318,6 @@
 
     <attr name="skin_totalDueToday" format="reference|string" />
     <attr name="skin_actionBarShopText" format="reference|string" />
+
+    <attr name="skin_bgSaleTextViewDrawable" format="reference" />
 </resources>
