--- a/project/src/travelocity/res/values-sw600dp/tablet_themes.xml
+++ b/project/src/travelocity/res/values-sw600dp/tablet_themes.xml
@@ -36,6 +36,8 @@
 
         <item name="skin_tablet_flight_confirmation_placeholder">@drawable/bg_itin_placeholder_travelocity</item>
         <item name="skin_tablet_hotel_confirmation_placeholder">@drawable/bg_itin_placeholder_travelocity</item>
+
+        <item name="skin_bgSaleTextViewDrawable">@drawable/bg_sale_text_view</item>
     </style>
 
     <style name="V2.Theme" parent="Theme.Travelocity.Tablet" />
